cert-manager/examples/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: foobar
  annotations:
    kubernetes.io/tls-acme: "true"
    # cert-manager.io/cluster-issuer: letsencrypt
spec:
  tls:  # this session is required
  - secretName: foo.bar-tls
    hosts:
    - foo.bar
  rules:
  - host: foo.bar
    http:
      paths:
      - backend:
          serviceName: foobar
          servicePort: 80

# Automatic Certificates for Ingress resources
# ref: https://cert-manager.io/docs/usage/ingress/
